--- a/web/account/register.xhtml
+++ b/web/account/register.xhtml
@@ -10,14 +10,9 @@
     <h:outputScript library="js" name="functions.js" />
 </h:head>
 <h:body style="margin: 0;">
-    <div style="background-image: url(https://pbs.twimg.com/media/ElPAQIsWkAAL6Z9.jpg);
-         height: 100%;
-         background-position: center;
-         background-repeat: no-repeat;
-         background-size: cover;
-         position: fixed;
-         
-        " class=" sifreunutma registImg w-full h-full relative">
+    <div class="fixed w-full h-full top-0" style="background-image: url(https://pbs.twimg.com/media/ElPAQIsWkAAL6Z9.jpg);"></div>
+    <div style="background-image: url(https://pbs.twimg.com/media/ElPAQIsWkAAL6Z9.jpg);"
+         class="w-full h-full relative"> */
         <h:form id="registerform" >
             <div class="w-[40%] mx-auto mt-5 rounded-lg mb-5 shadow-lg bg-gradient-to-br from-red-600 to-red-900">
                 <div class="mb-3">
