--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,7 @@
     <h:head>
         <meta http-equiv="Refresh" content= "0; URL=account/login.xhtml"/>
         <title>Facelet Title</title>
-        #{database.m()}
+        
         <script id="globals" values="#{a.message}"></script>
         <h:outputStylesheet library="css" name="tails.css" />
     </h:head>
@@ -14,7 +14,7 @@
         <f:metadata>
                 <!--<f:viewAction action="account/login"/>-->
         </f:metadata>
-        Hello from Facelets emma azza
+        <!--{database.m()}-->
     </h:body>
 </html>
 
