--- a/web/student/index.xhtml
+++ b/web/student/index.xhtml
@@ -133,7 +133,7 @@
                             <ul>
                                 <li><span>(#{announcement.getColumnObject(4)})</span></li>
                                 <li><span>#{announcement.getColumnObject(2)}</span></li>
-                                <li>#{announcement.getColumnObject(3)}</li>
+                                <li>#{generalUtils.format(announcement.getColumnObject(3))}</li>
                             </ul>
                         </div>
                         </ui:repeat>
